@@ -61,9 +61,9 @@ public class Set {
     public static <T> java.util.Set<T> of(T... entries) {
         switch (entries.length) {
             case 0:
-                return Set.of();
+                return of();
             case 1:
-                return Set.of(entries[0]);
+                return of(entries[0]);
             default:
                 return Collections.unmodifiableSet(new HashSet<>(Arrays.asList(entries)));
         }
@@ -81,9 +81,9 @@ public class Set {
     public static <T> java.util.Set<T> copyOf(Collection<? extends T> coll) {
         switch (coll.size()) {
             case 0:
-                return Set.of();
+                return Collections.emptySet();
             case 1:
-                return Set.of(coll.iterator().next());
+                return Collections.singleton(coll.iterator().next());
             default:
                 return Collections.unmodifiableSet(new HashSet<>(coll));
         }
